# request-matriz-rol-manager

./: .gitignore  .pre-commit-config.yaml  ESTRUCTURA_ARCHIVOS_JSON.md  INSTALAR.bat  LICENSE  LIMPIEZA_FINAL.md  README.md  REFACTORING_SUMMARY.md  ejecutar_app.py  inicializar_bd_autorizadores.py  mypy.ini  setup.cfg  setup.py
.github/: copilot-instructions.md
backup_unused/: autorizadores.py  autorizadores_clean.py  test_actualizacion.py  test_bd_autorizadores.py  test_bd_local.py  test_botones.py  test_correcciones.py  test_crear_solicitud.py  test_edicion_grilla.py  test_nuevos_estados.py
config/: matrices.yaml
config/tools/: README.md  pyproject.toml  setup.cfg
data/: autorizadores_bd.json  backup_solicitudes_20250823.json  solicitudes_conformidad.json
docs/: ARQUITECTURA_REFACTORIZACION.md  CODIGO_FINAL.md  DEVELOPMENT_TOOLS.md  DOCSTRINGS_GUIDE.md  FORMATO_CORREO.md  GUI.md  INSTALACION.md  PEP8_GUIDE.md  README.md  SISTEMA_COMPLETO.md  TYPE_HINTS.md  VSCODE_CONFIG.md
requirements/: base.txt  dev.txt  test.txt
scripts/: clean_project.py  cleanup.py  cli.py  generar_datos_ficticios.py  gestor_roles.py  llenar_datos_completos.py  mantener.py  migrar_bd.py  migrar_estados.py  mostrar_bd.py  mostrar_formato_correo.py  mostrar_nombres_archivos.py  probar_aplicacion_completa.py  probar_correos_individuales.py  revisar_bd.py
setup/docs/: CONFIGURACION.md  INSTALACION.md  TROUBLESHOOTING.md
setup/logs/: reporte_verificacion.txt
src/: run.py
tests/: test_cli.py  test_gestor_roles.py  test_gui_solicitud.py  test_init.py  test_matriz.py  test_utils.py
(+211 files in other folders)
